# cyberfabric-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  deny.toml  dylint.toml
.claude/commands/: cypilot.md
.claude/skills/cypilot/: SKILL.md
.clusterfuzzlite/: build.sh
.cypilot-adapter/: artifacts.json
.cypilot/config/: artifacts.toml
.github/: copilot-instructions.md
.github/workflows/: api_contracts.yml  cache_cleanup.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  cypilot.yml  docs.yml  e2e.yml  fmt.yml  gts-validation.yml  release-plz.yml  scorecard.yml
.windsurf/skills/cypilot/: SKILL.md
.windsurf/workflows/: cypilot.md
apps/gts-docs-validator/src/: scanner.rs
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: main.rs  registered_modules.rs
config/: e2e-local.yaml  mini-chat.yaml  quickstart-windows.yaml  quickstart.yaml  server.yaml
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  RESOURCE_GROUP_MODEL.md  TENANT_MODEL.md
docs/arch/errors/: DECOMPOSITION.md  DESIGN.md  PRD.md  TASKS.md
docs/arch/modkit-contract-binding/: DESIGN.md  PRD.md
docs/checklists/: ADR.md
dylint_lints/: Cargo.toml  README.md
dylint_lints/de11_testing/de1101_tests_in_separate_files/: extract_tests.py
examples/oop-modules/: README.md
examples/oop-modules/calculator-gateway/calculator-gateway/: Cargo.toml
examples/oop-modules/calculator-gateway/calculator-gateway/src/api/rest/: routes.rs
examples/oop-modules/calculator-gateway/calculator-gateway/src/domain/: service.rs
fuzz/: Cargo.toml
libs/modkit/: Cargo.toml
libs/modkit-canonical-errors/: Cargo.toml
libs/modkit-canonical-errors-macro/src/: lib.rs
libs/modkit-db/: Cargo.toml
libs/modkit-db/examples/: outbox_batch_multi_queue.rs  outbox_dead_letters.rs  outbox_retry_reject.rs  outbox_transactional.rs
libs/modkit-db/src/: lib.rs
libs/modkit-http/src/: client.rs
libs/modkit-odata/: Cargo.toml  README.md
libs/modkit-odata/src/: builder.rs  filter.rs  lib.rs  odata_filters.rs  odata_parse.rs  odata_parse_tests.rs  tests.rs
libs/modkit-odata/tests/: convert.rs
libs/modkit-security/src/: access_scope.rs
libs/modkit-utils/src/: var_expand.rs
libs/modkit/src/: lifecycle.rs  registry.rs
libs/system-sdks/: Cargo.toml
modules/approval-service/docs/: DESIGN.md  PRD.md  UPSTREAM_REQS.md
modules/chat-engine/docs/: DECOMPOSITION.md  DESIGN.md  PRD.md
modules/chat_engine/docs/: DESIGN.md
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: Cargo.toml
modules/file-parser/: Cargo.toml  QUICKSTART.md  README.md
modules/file-parser/docs/: DESIGN.md  PRD.md
modules/system/oagw/oagw/: Cargo.toml
modules/system/oagw/oagw-core/: Cargo.toml
modules/system/oagw/oagw-core/src/: lib.rs  plugin.rs  service.rs
modules/system/oagw/oagw-cp/: Cargo.toml
modules/system/oagw/oagw-cp/src/: control_plane.rs  lib.rs  module.rs  test_support.rs
modules/system/oagw/oagw-cp/src/domain/: mod.rs  service.rs
modules/system/oagw/oagw-cp/src/domain/repo/: credential_repo.rs  mod.rs  route_repo.rs  traits.rs  upstream_repo.rs
modules/system/oagw/oagw-dp/: Cargo.toml
modules/system/oagw/oagw-dp/src/: data_plane.rs  lib.rs  module.rs  test_support.rs
modules/system/oagw/oagw-dp/src/plugin/: apikey_auth.rs  noop_auth.rs  registry.rs
modules/system/oagw/oagw-dp/src/proxy/: headers.rs  mod.rs  service.rs
modules/system/oagw/oagw-dp/tests/: proxy_integration.rs
modules/system/oagw/oagw-sdk/: Cargo.toml
modules/system/oagw/oagw-sdk/examples/: blocking_build.rs  buffered_request.rs  deployment_modes.rs  streaming_sse.rs
modules/system/oagw/oagw-sdk/src/: api.rs  blocking.rs  body.rs  client.rs  config.rs  credential.rs  error.rs  gts.rs  impl_remote.rs  impl_shared.rs  lib.rs  models.rs  plugin.rs  request.rs  response.rs  service.rs  sse.rs
modules/system/oagw/oagw-sdk/src/models/: config.rs  dto.rs  endpoint.rs  mod.rs  route.rs  upstream.rs
modules/system/oagw/oagw-sdk/src/types/: body.rs  error_source.rs  mod.rs  request.rs  response.rs
modules/system/oagw/oagw-sdk/tests/: config_tests.rs  error_tests.rs  integration_remote.rs  request_tests.rs  sse_tests.rs  usage.rs
modules/system/oagw/oagw/src/: config.rs  lib.rs  module.rs  test_support.rs
modules/system/oagw/oagw/src/api/rest/: dto.rs  error.rs  extractors.rs  mod.rs
modules/system/oagw/oagw/src/api/rest/handlers/: mod.rs  proxy.rs  route.rs  upstream.rs
modules/system/oagw/oagw/src/api/rest/routes/: mod.rs  proxy.rs  route.rs  upstream.rs
modules/system/oagw/oagw/src/client/: mod.rs  oagw_client.rs  remote_proxy.rs  shared_process.rs
modules/system/oagw/oagw/src/domain/: credential.rs  error.rs  gts_helpers.rs  mod.rs  model.rs  repo.rs  test_support.rs  type_catalog.rs
modules/system/oagw/oagw/src/domain/cp/: mod.rs  service.rs  test_support.rs
modules/system/oagw/oagw/src/domain/cp/repo/: credential_repo.rs  mod.rs  route_repo.rs  traits.rs  upstream_repo.rs
modules/system/oagw/oagw/src/domain/plugin/: mod.rs
modules/system/oagw/oagw/src/domain/services/: client.rs  management.rs  mod.rs
modules/system/oagw/oagw/src/dp/: mod.rs  rate_limit.rs  service.rs  test_support.rs
modules/system/oagw/oagw/src/dp/plugin/: apikey_auth.rs  mod.rs  noop_auth.rs  registry.rs
modules/system/oagw/oagw/src/dp/proxy/: headers.rs  mod.rs  request_builder.rs
modules/system/oagw/oagw/src/infra/: type_provisioning.rs
modules/system/oagw/oagw/src/infra/plugin/: apikey_auth.rs  mod.rs  noop_auth.rs  registry.rs  request_id_transform.rs  required_headers_guard.rs
modules/system/oagw/oagw/src/infra/proxy/: headers.rs  mod.rs  pingora_proxy.rs  service.rs  session_bridge.rs
modules/system/oagw/oagw/src/infra/storage/: credential_repo.rs  route_repo.rs  upstream_repo.rs
modules/system/oagw/oagw/src/test_support/: api_v1.rs  harness.rs
modules/system/oagw/oagw/tests/: client_integration.rs  e2e_smoke_test.rs  management_api_test.rs  proxy_integration.rs
scripts/: ci.py  gh_stats.py  validate_module_names.py
scripts/lib/: prereq.py
testing/e2e/: conftest.py
(+327 files in other folders)
