[package]
name = "hyperspot-server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
users-info-example = ["dep:users-info"]
oop-example = ["dep:calculator-gateway", "dep:calculator"]
tenant-resolver-example = [
    "dep:tenant-resolver-gw-example",
    "dep:contoso-tr-plugin",
    "dep:fabrikam-tr-plugin",
]
single-tenant = ["dep:single-tenant-tr-plugin"]
static-tenants = ["dep:static-tr-plugin"]
otel = ["modkit/otel"]

[dependencies]
mimalloc = { version = "0.1" }
# Local crates
modkit = { workspace = true, features = ["bootstrap"] }

# System modules
api_gateway = { package = "cf-api-gateway", path = "../../modules/system/api-gateway" }
api_egress = { package = "cf-oagw", path = "../../modules/system/oagw/oagw" }
grpc_hub = { package = "cf-grpc-hub", path = "../../modules/system/grpc-hub" }
module_orchestrator = { package = "cf-module-orchestrator", path = "../../modules/system/module-orchestrator" }
types = { path = "../../modules/system/types" }
types_registry = { package = "cf-types-registry", path = "../../modules/system/types-registry/types-registry" }
tenant-resolver-gw = { package = "cf-tenant-resolver-gw", path = "../../modules/system/tenant-resolver/tenant-resolver-gw" }

# Optional tenant resolver plugins
single-tenant-tr-plugin = { package = "cf-single-tenant-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/single-tenant-tr-plugin", optional = true }
static-tr-plugin = { package = "cf-static-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/static-tr-plugin", optional = true }

# user modules
file_parser = { package = "cf-file-parser", path = "../../modules/file-parser" }
nodes_registry = { package = "cf-nodes-registry", path = "../../modules/system/nodes-registry/nodes-registry" }
simple_user_settings = { package = "cf-simple-user-settings", path = "../../modules/simple-user-settings/simple-user-settings" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

# Optional example module
users-info = { path = "../../examples/modkit/users-info/users-info", optional = true }
calculator-gateway = { path = "../../examples/oop-modules/calculator-gateway/calculator-gateway", optional = true }
calculator = { path = "../../examples/oop-modules/calculator/calculator", optional = true }

# tenant-resolver plugin example
tenant-resolver-gw-example = { package = "tenant-resolver-gw", path = "../../examples/plugin-modules/tenant-resolver/tenant-resolver-gw", optional = true }
contoso-tr-plugin = { path = "../../examples/plugin-modules/tenant-resolver/plugins/contoso-tr-plugin", optional = true }
fabrikam-tr-plugin = { path = "../../examples/plugin-modules/tenant-resolver/plugins/fabrikam-tr-plugin", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
