[package]
name = "calculator-gateway"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Calculator gateway module - example in-process REST service"

[dependencies]
# External SDKs (dependencies on other modules)
calculator-sdk = { path = "../../calculator/calculator-sdk" }

# ModKit
modkit = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }

# Axum & HTTP
axum = { workspace = true }
http = { workspace = true }

# Serialization (for REST DTOs)
serde = { workspace = true }
utoipa = { workspace = true }

# Async & concurrency
async-trait = { workspace = true }
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utils
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
