[package]
name = "cf-oagw-core"
version.workspace = true
edition.workspace = true

[lib]
name = "oagw_core"
path = "src/lib.rs"

[dependencies]
# HTTP types
http = { workspace = true }
bytes = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = { workspace = true }
