[package]
name = "cf-oagw-dp"
version.workspace = true
edition.workspace = true
description = "Data Plane implementation - proxy orchestration and plugin execution"

[lib]
name = "oagw_dp"
path = "src/lib.rs"

[features]
test-utils = ["cf-oagw-cp/test-utils"]

[dependencies]
cf-oagw-sdk = { path = "../oagw-sdk" }
cf-oagw-cp = { path = "../oagw-cp" }
modkit = { workspace = true }
inventory = { workspace = true }
async-trait = "0.1"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
bytes = "1"
tokio = { version = "1", features = ["time"] }
dashmap = "6.1"
futures-util = "0.3"
arc-swap = "1"
tracing = "0.1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
cf-oagw-cp = { path = "../oagw-cp", features = ["test-utils"] }
cf-oagw = { path = "../oagw", features = ["test-utils"] }
uuid = { version = "1", features = ["v4"] }
