[package]
name = "cf-oagw-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "oagw_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0"
http = "1.3"
bytes = "1"
async-trait = "0.1"
futures-core = "0.3"
