[package]
name = "cf-oagw-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "oagw_sdk"
path = "src/lib.rs"

[features]
default = []
axum = ["dep:axum"]

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
modkit-security = { workspace = true }
axum = { workspace = true, features = ["ws"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
