[package]
name = "cf-oagw"
version.workspace = true
edition.workspace = true

[lib]
name = "oagw"
path = "src/lib.rs"

[features]
test-utils = ["axum/ws", "dep:async-stream", "dep:tokio"]

[dependencies]
cf-oagw-sdk = { path = "../oagw-sdk" }
cf-oagw-cp = { path = "../oagw-cp" }
cf-oagw-dp = { path = "../oagw-dp" }
modkit = { workspace = true }
inventory = { workspace = true }
async-trait = "0.1"
axum = "0.8"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
arc-swap = "1"
anyhow = "1"
tracing = "0.1"
async-stream = { version = "0.3", optional = true }
tokio = { version = "1", features = ["net", "sync", "rt", "time"], optional = true }
# Client implementation dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.21"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
cf-oagw-dp = { path = "../oagw-dp", features = ["test-utils"] }
cf-oagw-cp = { path = "../oagw-cp", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
hyper = "1.5"
async-trait = "0.1"
