[package]
name = "cf-oagw"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "oagw"
path = "src/lib.rs"

[features]
test-utils = ["axum/ws", "dep:async-stream", "dep:futures", "dep:tower", "tokio/net", "tokio/sync", "tokio/rt"]

[dependencies]
cf-oagw-sdk = { path = "../oagw-sdk", features = ["axum"] }
modkit = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
bytes = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
gts = { workspace = true }
utoipa = { workspace = true }
types-registry-sdk = { workspace = true }
authz-resolver-sdk = { workspace = true }
# CP deps
dashmap = { workspace = true }
thiserror = { workspace = true }
# DP deps
form_urlencoded = "1"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["time"] }
# test-utils optional deps
async-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tower = { workspace = true, features = ["util"], optional = true }

[dev-dependencies]
cf-oagw = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
tower = { workspace = true, features = ["util"] }
hyper = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
